--- a/06-graphing.Rmd
+++ b/06-graphing.Rmd
@@ -158,7 +158,7 @@ print(my_graph)
 
 ## Aesthetics
 
-Exactly how does that aesthetic, aes(), command work? What happens when we put the data and mapping in the ggplot() command instead of the specific commands such as geom_col()? When we put data and the mapping arguments in the ggplot() command we set those attributes for the entire graph. To understand this, you need to know that ggplot uses an internal data set that I will call the "black box" data set (i.e., inside the [black box](https://en.wikipedia.org/wiki/Black_box) of ggpplot). To create a graph ggplot maps/copies columns from you data set (e.g., movie_data) to an internal data set. This internal data set is then used to create the graph. Figure \@ref(fig:showmap) below illustrates what is happening "inside the black box" when you create the graph using the code above.
+Exactly how does that aesthetic, aes(), command work? What happens when we put the data and mapping in the ggplot() command instead of the specific commands such as geom_col()? When we put data and the mapping arguments in the ggplot() command we set those attributes for the entire graph. To understand this, you need to know that ggplot uses an internal data set that we will call the "black box" data set (i.e., inside the [black box](https://en.wikipedia.org/wiki/Black_box) of ggplot). To create a graph ggplot maps/copies columns from your data set (e.g., movie_data) to an internal data set. This internal data set is then used to create the graph. Figure \@ref(fig:showmap) below illustrates what is happening "inside the black box" when you create the graph using the code above.
 
 
 ```{r, showmap, echo = FALSE, out.width = "70%", fig.cap="Internal data structure for ggplot"}
@@ -169,7 +169,7 @@ knitr::include_graphics("ch_graphing/images/mapping.png")
 
 ### Fill color
 
-You might want to influence the color of the bars in the graph such that the bars for Marvel and DC movies have different colors. That's easy to do with the aes() command. We simply tell aes() that the **fill** color of any object in the graph should be determined by the studio column. Simply adding "fill = studio" to the aes() command changes the colors of the bars -- any any other object we had to the graph for which fill would be relevant. The internal workings are illustrated in Figure \@ref(fig:addfill).
+You might want to influence the color of the bars in the graph such that the bars for Marvel and DC movies have different colors. That's easy to do with the aes() command. We simply tell aes() that the **fill** color of any object in the graph should be determined by the studio column. Simply adding "fill = studio" to the aes() command changes the colors of the bars -- and any other object on the graph for which fill would be relevant. The internal workings are illustrated in Figure \@ref(fig:addfill).
 
 ```{r, fig.width = 6, fig.height= 3}
 my_graph <- ggplot(data = movie_data,
@@ -191,9 +191,9 @@ knitr::include_graphics("ch_graphing/images/mapping_fill.png")
 
 Just because you specify something in the ggplot() command doesn't mean that you are "stuck with it" for all your subsequent commands. Recall how at the start of this exercise we specified the data and the mapping for each geom_col() and geom_text() individually. We can still do that. 
 
-Now we want to add the Rotten Tomatoes audience score for each movie above the box office revenue. But if we just use geom_text() like we did before it plot the same information boxoffice information because of the  "label = boxoffice" aes() specification in the ggpplot() command. We want the new gome_text() command to plot plot different text; that is, we want it to use "label = tomatoes_aud". 
+Now we want to add the Rotten Tomatoes Audience score for each movie above the box office revenue. But if we use geom_text(), like we did before, it will plot the same boxoffice information because of  "label = boxoffice" in the aes() specification within ggplot(). We want the new geom_text() command to plot different text; that is, we want it to use "label = tomatoes_aud". 
 
-Fortunately, if we simply put "mapping = aes(label = tomatoes_aud)" within the new geom_text() command we get the desired information on the graph. The mapping/aes argumentrs within geom_text() overrides the mapping/aes argumentrs within ggplot(). Or more accurately, the new geom_text() command creates it's own version of the internal data set in which the label column is filled with information from tomatoes_aud.
+Fortunately, if we simply put "mapping = aes(label = tomatoes_aud)" within the new geom_text() command we get the desired information on the graph. The mapping/aes arguments within geom_text() override the mapping/aes arguments within ggplot(). Or more accurately, the new geom_text() command creates its own version of the internal data set in which the label column is filled with information from tomatoes_aud.
 
 ```{r, fig.width = 6, fig.height= 4}
 my_graph <- ggplot(data = movie_data,
@@ -267,7 +267,7 @@ my_graph <- ggplot(data = movie_data,
 print(my_graph)
 ```
 
-Note that if you had a continuous variable on the x-axis also (we do not in this example), you could set the range of both the x- and y-axes like this:
+Note that if you had a continuous variable on the x-axis (we do not in this example), you could set the range of both the x- and y-axes like this:
 
 ```{r, eval=FALSE}
 coord_cartesian(ylim = c(0, 3500),
@@ -297,7 +297,7 @@ my_graph <- ggplot(data = movie_data,
 print(my_graph)
 ```
 
-Note that if you had a continuous variable on the x-axis also (we do not in this example), you could set the ticks of the x-axis like the code below using scale_x_continuous:
+Note that if you had a continuous variable on the x-axis (we do not in this example), you could set the ticks of the x-axis like the code below using scale_x_continuous:
 
 ```{r, eval=FALSE}
 scale_x_continuous(breaks = seq(0, 3500, by = 500))
@@ -305,7 +305,7 @@ scale_x_continuous(breaks = seq(0, 3500, by = 500))
 
 ### Labels 
 
-We use the labs() command to set the labels forthe x- and y-axes:
+We use the labs() command to set the labels for the x- and y-axes:
 
 ```{r, fig.width = 6, fig.height= 3}
 my_graph <- ggplot(data = movie_data,
@@ -332,11 +332,13 @@ print(my_graph)
 
 ### Text
 
-What if we want to use full movie title rather than short version on the x-axis of the graph? Two methods are presented below. 
+What if we want to use the full movie title rather than the short version on the x-axis of the graph? That is, you want to change the values along the x-axis. Two methods are presented below. 
 
-#### Method 1: Recoding labels 
+#### Method 1: Recoding axis values 
 
-Our data file contains a column with the long/full version of the movie names. But many times you won't have the additional/longer labels you want to use available in this manner. In this, you use the scale_x_discrete() command to relabel our factor when we make the labels on x-axis. The code is below - notice the problem we have with the labels overlapping though. On the next page, we'll use a easier approach though - since we have an extra column with the full titles.
+Our data file contains a column with the long/full version of the movie names. But many times you won't have the additional/longer labels available in this manner. In this situation, you use the scale_x_discrete() command to change the values along the x-axis.
+
+The values along the x-axis come from the short_title column which is a factor. The levels of that factor correspond to the short titles for the movies (Iron, Thor, etc.). We need to relabel the levels of the short_title factor to get a graph with full titles. We relabel the levels of the short_title factor using the scale_x_discrete() command. The graph code with scale_x_discrete() command is below - notice the problem we have with the labels overlapping though. On the next page, we'll use an easier approach though - since we have an extra column with the full titles.
 
 ```{r, fig.width = 6, fig.height= 3}
 my_graph <- ggplot(data = movie_data,
@@ -370,7 +372,7 @@ print(my_graph)
 
 #### Method 2: Longer label columns 
 
-With our movie data we don't need to use **scale_x_discrete** because we have a column in the data with the full titles. Consequently, to use full length titles we just have to change the **mapping** for x from short_title to title. Notice we still have the problem with overlapping labels on the x-axis!
+With our movie data we don't need to use scale_x_discrete() because we have a column in the data with the full titles. Consequently, to use full length titles we just have to change the *mapping*for x from short_title to title. Notice that we still have the problem with overlapping labels on the x-axis!
 
 ```{r, fig.width = 6, fig.height= 3}
 my_graph <- ggplot(data = movie_data,
@@ -396,7 +398,7 @@ print(my_graph)
 
 ### Angle 
 
-Use theme() to adjust angle of x-axis labels. We can use the theme command to adjust the angle of the text on the x-axis. However, notice how the longer titles are centered on each point on the x-axis. In the next section we fix this problem.
+Use theme() to adjust the angle of x-axis labels. Notice, however, that the longer titles are vertically centered on each point on the x-axis. In the next section we fix this problem.
 
 **Important**: The theme command must come after the theme_classic command. Otherwise, theme_classic will undo the work done by the theme_command if it appears after the theme command.
 
@@ -420,7 +422,6 @@ my_graph <- ggplot(data = movie_data,
 
 print(my_graph)
 ```
-
 
 
 ### Alignment
@@ -454,7 +455,7 @@ print(my_graph)
 
 #### Increasing order
 
-We can make the movie bars go left to right from lowest to highest box office receipts by changing the factor order prior to creating the graph. We do so with the mutate()  and fct_reorder() commands. The default order is ascending values even though we don't specify it. 
+We can make the movie bars go left to right in lowest to highest box office receipt order by changing the factor order prior to creating the graph. We do so with the mutate()  and fct_reorder() commands. The default order is ascending values even though we don't specify it. 
 
 ```{r}
 movie_data <- movie_data %>% 
@@ -488,7 +489,7 @@ print(my_graph)
 
 #### Decreasing order  
 
-We can make the movie bars go left to right from highest to lowest box office receipts by changing the factor order prior to creating the graph. We use the same code as before but add the desc() command (i.e.,descending)  around boxoffice in the fct_reorder() call:
+We can make the movie bars go left to right in highest to lowest box office receipt order by changing the factor order prior to creating the graph. We use the same code as before but add the desc() command (i.e.,descending)  around boxoffice in the fct_reorder() call:
 
 ```{r}
 movie_data <- movie_data %>% mutate(title = fct_reorder(title,
@@ -519,10 +520,9 @@ print(my_graph)
 ```
 
 
-
 #### Custom order  
 
-We can make the movie bars go left to right from in an order of our chooseing with the fct_relevel() command. Here I manually indicate an order that places the movies highest to lowest within movie studio (Marvel or DC).
+We can make the movie bars go left to right in a custom order by changing the factor order prior to creating the graph. Because we want a custom order of the factor levels we use fct_relevel(), instead of the the fct_reorder() command from the previous two examples. Below I use this approach to manually order movies highest to lowest boxoffice within movie studio (Marvel or DC).
 
 ```{r}
 movie_data <- movie_data %>% 
@@ -680,9 +680,7 @@ knitr::include_graphics("ch_graphing/images/logo_color_graph.png")
 
 ## Emoji
 
-### Installation
-
-Make the graph more fun with the emoGG package. You might like to make the graph more fun by putting tomatoes on the graph to indicate what the extra numbers mean. We can do that with the emoGG package. This installation instruction for this package are at the start of this chapter; note, that it is installed via GitHub rather than the CRAN. Course R Studio Cloud users - the installation has already been done.
+Make the graph more fun with the emoGG package. You might like to make the graph more fun by putting tomatoes on the graph to indicate what the extra numbers mean. We can do that with the emoGG package. The installation instructions for this package are at the start of this chapter; note, that it is installed via GitHub rather than the CRAN. Course R Studio Cloud users - the installation has already been done.
 
 After installation you need to activate the emoGG package:
 ```{r}
