--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -261,45 +261,75 @@ $$
 $$
 
 
-```{r, out.height="80%", echo = F}
+```{r, include=FALSE}
 textMean1 <- expression(Delta~"M" == 15)
 textd1 <- expression(delta == 1.49)
 textfemale1 <- expression("Female"~mu == 165)
 textmale1 <- expression("Male"~mu == 180)
 texts1 <- expression(sigma == 10.1)
 
+male_pop_data <- pop_data %>% filter(sex == "male")
+female_pop_data <- pop_data %>% filter(sex == "female")
 
 
-twopop <- ggplot(data = pop_data,
-       mapping = aes(x = height,
-                     alpha = sex)) +
+gmale <- ggplot(data = male_pop_data,
+       mapping = aes(x = height)) +
   geom_histogram(position = "identity",
                  boundary = 0,
                  binwidth = 5,
                  fill = "black",
-                 color =  "black") +
+                 color =  "black",
+                 alpha = .40) +
   theme_classic() +
   scale_alpha_manual(values = c(.20, .50)) +
-  facet_wrap(~sex, nrow = 2) +
   scale_x_continuous(breaks = seq(100, 250, by = 10)) +
-  geom_vline(xintercept = 165, size = 2) +
-  geom_vline(xintercept = 180, size = 2) +
-  labs(x = "Height (cm)", y = "Count", alpha = "Sex") +
-  annotate("text", x = 230, y = 9000, 
+  geom_segment(x = 165, xend = 165, y = 0, yend = 15000, size = 1, linetype = "dotted") +
+  geom_segment(x = 180, xend = 180, y = 0, yend = 15000, size = 1) +
+  geom_segment(x = 170, xend = 180, y = 13000, yend = 13000, size = .7, arrow = arrow(length = unit(0.1, "inches"))) +
+  geom_segment(x = 175, xend = 165, y = 13000, yend = 13000, size = .7, arrow = arrow(length = unit(0.1, "inches"))) +
+  labs(x = "Height (cm)", y = "Count", title = "A. Male Population") +
+  annotate("text", x = 172, y = 12200, 
            parse = T, label = as.character(textMean1)) +
-  annotate("text", x = 230, y = 7000, 
+  annotate("text", x = 172, y = 13800, 
            parse = T, label = as.character(textd1)) +
-  annotate("text", x = 90, y = 9000, 
-           parse = T, label = as.character(textfemale1), hjust = 0) +
-  annotate("text", x = 90, y = 7000, 
+  annotate("text", x = 185, y = 13800, 
            parse = T, label = as.character(textmale1), hjust = 0) +
-  annotate("text", x = 90, y = 5000, 
-           parse = T, label = as.character(texts1), hjust = 0)
+  annotate("text", x = 185, y = 12200, 
+           parse = T, label = as.character(texts1), hjust = 0) + 
+  coord_cartesian(ylim = c(0, 15000), xlim = c(120, 220))
 
-ggsave(filename = "ch_samples/images/sex_pops.png", dpi = 300, width = 8, height = 6)
+gfemale <- ggplot(data = female_pop_data,
+       mapping = aes(x = height)) +
+  geom_histogram(position = "identity",
+                 boundary = 0,
+                 binwidth = 5,
+                 fill = "black",
+                 color =  "black",
+                 alpha = .10) +
+  theme_classic() +
+  scale_alpha_manual(values = c(.20, .50)) +
+  scale_x_continuous(breaks = seq(100, 250, by = 10)) +
+  geom_segment(x = 165, xend = 165, y = 0, yend = 15000, size = 1, linetype = "dotted") +
+  geom_segment(x = 180, xend = 180, y = 0, yend = 15000, size = 1) +
+  geom_segment(x = 170, xend = 180, y = 13000, yend = 13000, size = .7, arrow = arrow(length = unit(0.1, "inches"))) +
+  geom_segment(x = 175, xend = 165, y = 13000, yend = 13000, size = .7, arrow = arrow(length = unit(0.1, "inches"))) +
+  labs(x = "Height (cm)", y = "Count", title = "B. Female Population") +
+  annotate("text", x = 172, y = 12200, 
+           parse = T, label = as.character(textMean1)) +
+  annotate("text", x = 172, y = 13800, 
+           parse = T, label = as.character(textd1)) +
+  annotate("text", x = 160, y = 13800, 
+           parse = T, label = as.character(textfemale1), hjust = 1) +
+  annotate("text", x = 160, y = 12200, 
+           parse = T, label = as.character(texts1), hjust = 1) + 
+  coord_cartesian(ylim = c(0, 15000), xlim = c(120, 220))
+
+png(filename = "ch_samples/images/sex_pops.png", res = 300, width =8*300, height = 6*300)
+gridExtra::grid.arrange(gmale, gfemale, nrow = 2)
+dev.off()
 ```
 
-```{r sexpop, echo=FALSE, out.width="95%", fig.scap = "Illustration of standardized mean difference of $\\delta =1.49$", fig.cap="Illustration of the standardized mean difference of 1.49 for height between males and females. The solid black vertical lines indicates the means ($\\mu$) for the two populations."}
+```{r sexpop, echo=FALSE, out.width="95%", fig.scap = "Illustration of standardized mean difference of $\\delta =1.49$", fig.cap="Illustration of the standardized mean difference of 1.49 for male and female heights. The solid black vertical line indicates the mean for males whereas the dotted vertical line indicates the mean for females."}
 knitr::include_graphics("ch_samples/images/sex_pops.png")
 ```
 
